--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <kotlin.version>1.3.61</kotlin.version>
         <jackson.version>2.10.2</jackson.version>
         <ktor.version>1.3.0</ktor.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -109,6 +110,24 @@
                 <configuration>
                     <jvmTarget>1.8</jvmTarget>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.ozsie</groupId>
+                <artifactId>detekt-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <config>detekt-config.yml</config>
+                            <buildUponDefaultConfig>true</buildUponDefaultConfig>
+                            <baseline>detekt-baseline.xml</baseline>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
