refactoring and publish package options

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>olegthelilfix</groupId>
     <artifactId>ArxivApiAccess</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1-RELEASE</version>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/olegthelilfix/ArxivApiAccess</url>
+        </repository>
+    </distributionManagement>
 
     <repositories>
         <repository>
@@ -152,6 +160,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
