--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>olegthelilfix</groupId>
     <artifactId>ArxivApiAccess</artifactId>
-    <version>0.2-RELEASE</version>
+    <version>0.3-SNAPSHOT</version>
 
     <distributionManagement>
         <repository>
